Added suggested changes